# blockchain-lab

./: .gitignore  COST.md  Makefile  README.md  test-wallets.md
.bk/nft_minter/: Cargo.toml
.bk/nft_minter/src/: lib.rs
.docs/: ACCOUNTS.md  DEFINITIONS.md  DELEGATION.md  NFTS.md  SMART_CONTRACTS.md  SOLANA.md  TRANSACTIONS.md  TRANSFERS.md
hello_world/: README.md  index.js
nft_minter/: Cargo.toml  README.md
nft_minter/src/: lib.rs
nftminter-client/: index.js  package.json
nfts/mint-nft-meta/: app.js  package.json
nfts/mint-nft-raw/: .gitignore  README.md  app.js
nfts/mint-nft-raw-meta/: README.md
nfts/mint-nft-raw-meta/mint/src/: lib.rs
nfts/mint-nft-raw/mint/src/: lib.rs
nfts/mint-nft/assets/: example.json
nfts/mint-nft/programs/mint-nft/: Cargo.toml
nfts/mint-nft/programs/mint-nft/src/: lib.rs
nfts/transfer-nft/: README.md  built-in.js  package-lock.json  package.json
nfts/transfer-nft/transfer/: Cargo.toml
simple-client/: README.md  index.js  package-lock.json  package.json
src/blockchain-proxy-api/: package.json
src/blockchain-proxy-api/src/: index.ts
src/blockchain-proxy-api/src/controllers/: cmds.ts  qrys.ts  types.ts
src/clients/blockchain-proxy-api/: package.json
src/clients/scripts/: package.json  utls.js
src/clients/scripts/lab/: index.js  mint-nfts.client.js  package.json  utls.js
src/clients/scripts/mint/: README.md  eslint.config.js  package.json
src/clients/scripts/workflows/: README.md  (+1 more)
src/clients/simulation-api/: package.json
src/clients/simulations/: README.md  bubbles-2.html  bubbles-consumption.html  bubbles.html  data.js  mocked.js  utls.js
src/clients/simulations-api/: package.json
src/clients/sol-proxy-api/: .env  Dockerfile  README.md  docker-run.sh  package.json
src/programs/anchor_nft_game/: Anchor.toml  Makefile  client.ts  package.json
src/programs/anchor_nft_game_v2/: README.md
src/programs/burn-nft/: README.md
src/programs/game/: Cargo.toml  Makefile  client.ts  package.json
src/programs/hello_world/: Cargo.toml  README.md
src/programs/mint-nft-mpl/: README.md  package.json
src/programs/mint-nft-raw-meta/mint/: Cargo.toml
src/programs/transfer-nft/: README.md  built-in.js
(+93 files in other folders)
