cargo-features = ["edition2024"]

[package]
name = "mint"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.2.0"
spl-associated-token-account = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-token = { version="7.0.0", features = [ "no-entrypoint" ] }

[features]
no-entrypoint = []

[dev-dependencies]
solana-sdk = "2.2.0"

[lib]
crate-type = ["cdylib", "lib"]
